Use CodeArea show text file